Adiciona mensagem do github.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aprendendo GIT</title>
 </head>
 <body>
-    <h1>Ola mundo GIT</h1>
+    <h1>Ola mundo GIT e Github</h1>
     <script src="js/index.js"></script>
 </body>
 </html>
